# monster-cr-predictor

./: .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml  setup.sh
.github/workflows/: test.yaml
data/raw/: monsters.json
notebooks/: 01_eda.ipynb
src/cr_predictor/: api.py
src/cr_predictor/data/: fetch.py
src/cr_predictor/features/: engineering.py
src/cr_predictor/models/: train.py
src/cr_predictor/static/: index.html  script.js  style.css
tests/: test_api.py  test_features.py  test_model.py
