[project]
name = "monster-cr-predictor"
version = "0.1.0"
description = "Predicting D&D 5e Monster Challenge Ratings with Machine Learning"
requires-python = ">=3.12"
dependencies = [
    "scikit-learn",
    "pandas",
    "fastapi",
    "uvicorn",
]

[dependency-groups]
dev = [
    "matplotlib",
    "seaborn",
    "jupyter",
    "requests",
    "pytest",
    "httpx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cr_predictor"]
